# cicd-github-actions

./: 42c_cli-0.1.0-py3-none-any.whl  42c_cli-0.1.1-py3-none-any.whl  42c_cli-0.1.2-py3-none-any.whl  42c_cli-0.1.3-py3-none-any.whl  42ctl-0.1.3-py3-none-any.whl  42ctl-0.1.4-py3-none-any.whl  Dockerfile  README.md  action.sh  action.yaml  pyproject.toml
check-sqg/: action.yaml
convert-to-sarif/: action.yaml
crunch42/: parser.py  report_service.py  sarif_service.py  scan_service.py
crunch42/cli/: crunch42_scan.py
scan/: action.yaml
xliic_cli/: __main__.py
xliic_cli/api_discover/: __init__.py  setup.py
xliic_cli/api_discover/auth/: app.py  cli.py
xliic_cli/api_discover/buckets/: app.py  cli.py  models.py
xliic_cli/api_discover/generation_rules/: app.py  cli.py  models.py  parsers.py
xliic_cli/api_discover/proxy/: cli.py  proxy.py  utils.py
xliic_cli/api_discover/quickgen/: __init__.py  app.py  cli.py  models.py  parsers.py
xliic_cli/api_discover/quickgen/templates/: conf_file_template.yaml
xliic_cli/helpers/: __init__.py  config_file.py  constants.py  errors.py  http.py  parser.py  report_service.py  types_helpers.py
xliic_cli/scan/: cli.py
xliic_cli/scan/src/: owasp_details.py  sarif_service.py  scan_client.py
