[tool.poetry]
name = "crunch42-sdk"
version = "0.1.0"
description = ""
authors = ["Denis Didushko <denis.didushko@42crunch.com>", "Anton Krasovsky <anton.krasovsky@42crunch.com>"]
readme = "README.md"
packages = [{include = "crunch42"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
jsonpointer = "^2.3"
ruamel-yaml = "^0.17.21"
click = "^8.1.3"

[tool.poetry.scripts]
crunch42_scan = "crunch42.cli.crunch42_scan:scan"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
